commented out the tiny triangle from the homepage cause for some reason it wont transform into a polygon

--- a/client/src/components/home/index.css
+++ b/client/src/components/home/index.css
@@ -63,7 +63,7 @@
 
   background: #171617;
 }
-.homeRectangle2 {
+/* .homeRectangle2 {
   position: absolute;
   width: 14px;
   height: 57px;
@@ -71,4 +71,4 @@
   top: 620px;
 
   background: #2d2c2c;
-}
+} */
