--- a/client/src/components/template/index.css
+++ b/client/src/components/template/index.css
@@ -12,7 +12,19 @@
   left: 8px;
   top: 18px;
 }
-.home{}
+.home{position: absolute;
+  width: 38px;
+  height: 19px;
+  left: 727px;
+  top: 52px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+
+  color: #ffffff;}
 .vision {
   position: absolute;
   width: 38px;
