signing off, need to get info about ferlan and style the pros page. Also this is my last commit before my birthday tomorrowgit add -A ill have an amazing time for anyone reading this

--- a/client/src/components/contact/index.css
+++ b/client/src/components/contact/index.css
@@ -20,6 +20,7 @@
   height: 18.78px;
   left: 413px;
   top: 305.22px;
+  text-decoration: underline;
 
   font-family: Avenir;
   font-style: normal;
@@ -35,6 +36,7 @@
   height: 19px;
   left: 436px;
   top: 450px;
+  text-decoration: underline;
 
   font-family: Avenir;
   font-style: normal;
