--- a/client/src/components/pros/index.css
+++ b/client/src/components/pros/index.css
@@ -1,3 +1,65 @@
-.description{
-  
+.meetUs {
+  position: absolute;
+  width: 130px;
+  height: 25px;
+  left: 460px;
+  top: 149px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  /* identical to box height */
+
+  color: #ffffff;
+}
+.description1 {
+  position: absolute;
+  width: 500px;
+  height: 49px;
+  left: 262px;
+  top: 235px;
+
+  font-family: Avenir;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+
+  color: #000;
+}
+.description2 {
+  position: absolute;
+  width: 500px;
+  height: 49px;
+  left: 262px;
+  top: 280px;
+
+  font-family: Avenir;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+
+  color: #000;
+}
+.description3 {
+  position: absolute;
+  width: 500px;
+  height: 49px;
+  left: 262px;
+  top: 505px;
+
+  font-family: Avenir;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+
+  color: #000;
+
 }
