--- a/client/src/components/template/index.css
+++ b/client/src/components/template/index.css
@@ -1,10 +1,15 @@
-.mainContainer {
-  position: relative;
+body{
+  background-color: #716f6f;
   width: 1024px;
-  height: 1300px;
+  height: fit-content;
+}
+/* .mainContainer {
+  position: relative;
+  width: auto;
+  height: auto;
 
   background: #716f6f;
-}
+} */
 .mainLogo {
   position: absolute;
   width: 81px;
